# ChangeLog for genkernel
# Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org>
  +patches/busybox/1.7.4/1.7.4-mount-umount-i-option.diff,
  -patches/busybox/1.7.4/1.7.4-simplify-path-debug.diff:
  Replace debug patch with simple patch to add trivial support for -i option
  to mount/umount

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts:
  Add suid,dev to unionfs mount opts

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts:
  Remove allow_root mount opt, since it conflicts with allow_other

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts,
  patches/busybox/1.7.4/1.7.4-simplify-path-debug.diff:
  Change typo in unionfs-fuse mount opt and add -i support to umount

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/busy-config,
  arch/ia64/busy-config, arch/mips/busy-config, arch/parisc/busy-config,
  arch/parisc64/busy-config, arch/ppc/busy-config, arch/ppc64/busy-config,
  arch/sparc/busy-config, arch/sparc64/busy-config, arch/um/busy-config,
  arch/x86/busy-config, arch/x86_64/busy-config, defaults/busy-config:
  Enable CONFIG_FEATURE_MTAB_SUPPORT option for busybox

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts,
  +patches/busybox/1.7.4/1.7.4-mount-i-option.diff:
  Add patch for busybox to add -i option to mount command

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
  Compile unionfs-fuse statically

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc,
  gen_initramfs.sh:
  Make sure that /sbin/unionfs is +x

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh,
  gen_initramfs.sh:
  Correct unionfs-fuse bincache path and clean up debugging code

  13 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
  Add -L line into LIB= in Makefile
